--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,8 @@
               </a>
             </li>
             <li class="nav-item"><a class="nav-link" href="#">Community</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
+
 
             {% if user.is_authenticated %}
               <li class="nav-item"><a class="nav-link" href="{% url 'profile' %}">Profile</a></li>
