--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
                 {% endif %}
               </a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#">Community</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'community' %}">Community</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
 
 
