Add JSON-LD structured data for products to improve SEO

--- a/store/templates/store/product_detail.html
+++ b/store/templates/store/product_detail.html
@@ -79,4 +79,30 @@
     }
   });
 </script>
+
+<!-- Structured Data JSON-LD -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Product",
+  "name": "{{ product.name|escapejs }}",
+  "image": [
+    "{% if product.image %}{{ product.image.url }}{% else %}{% static 'images/placeholder.png' %}{% endif %}"
+  ],
+  "description": "{{ product.description|truncatechars:150|escapejs }}",
+  "sku": "{{ product.id }}",
+  "brand": {
+    "@type": "Brand",
+    "name": "Drift Cult"
+  },
+  "offers": {
+    "@type": "Offer",
+    "url": "https://driftcult.art{% url 'product_detail' product.pk %}",
+    "priceCurrency": "EUR",
+    "price": "{{ product.price }}",
+    "availability": "https://schema.org/InStock",
+    "itemCondition": "https://schema.org/NewCondition"
+  }
+}
+</script>
 {% endblock %}
