--- a/community/templates/community/post_detail.html
+++ b/community/templates/community/post_detail.html
@@ -8,9 +8,13 @@
 {% block content %}
 <div class="blog-container">
   <h1>{{ post.title }}</h1>
-  <p class="meta">Published: {{ post.published_date }}</p>
+  <p class="meta">Posted on {{ post.created_at|date:"F j, Y" }} by Drift Cult</p>
   <div class="blog-body">
     {{ post.content|safe }}
+  </div>
+
+  <div class="back-link">
+    <a href="{% url 'community:community_list' %}">← Back to Community</a>
   </div>
 </div>
 {% endblock %}
