--- a/store/templates/store/product_form.html
+++ b/store/templates/store/product_form.html
@@ -4,7 +4,37 @@
   <h2>{{ title }}</h2>
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
+
+    <div class="form-group">
+      {{ form.name.label_tag }}
+      {{ form.name }}
+    </div>
+
+    <div class="form-group">
+      {{ form.description.label_tag }}
+      {{ form.description }}
+    </div>
+
+    <div class="form-group">
+      {{ form.price.label_tag }}
+      {{ form.price }}
+    </div>
+
+    <div class="form-group">
+      {{ form.category.label_tag }}
+      {{ form.category }}
+    </div>
+
+    <div class="form-group">
+      {{ form.image.label_tag }}
+      {{ form.image }}
+    </div>
+
+    <div class="form-group">
+      <label>Available Sizes:</label>
+      {{ form.sizes }}
+    </div>
+
     <button type="submit" class="btn btn-success">Save</button>
     <a href="{% url 'admin_dashboard' %}" class="btn btn-secondary">Cancel</a>
   </form>
