--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -26,7 +26,7 @@
       <h1 class="display-4 font-weight-bold">Drift Cult</h1>
       <p class="lead mt-3">Minimalist Surf, Skate & Outdoor Apparel made to last the journey.</p>
       <p class="mb-4">No sellouts. No mainstream. Just raw, authentic culture. Join the movement.</p>
-      <a href="{% url 'product_list' %}" class="btn btn-dark btn-lg">Start Shopping</a>
+      <a href="{% url 'product_list' %}" class="btn btn-dark mb-5">Start Shopping</a>
     </div>
   </div>
 </div>
