--- a/store/static/css/custom.css
+++ b/store/static/css/custom.css
@@ -35,4 +35,30 @@
   
   .btn-close {
     filter: invert(1); /* Make close button white */
-  }  
+  }
+
+
+  /* 404 Page Styling */
+.error-404-container {
+  background: url("/static/images/404_desert.jpg") no-repeat center center;
+  background-size: cover;
+  height: 100vh;
+  color: white;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 2rem;
+}
+
+.error-404-container h1 {
+  font-size: 5rem;
+  margin-bottom: 1rem;
+}
+
+.error-404-container p {
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+}
