--- a/store/templates/404.html
+++ b/store/templates/404.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="error-container" style="background-image: url('{% static 'images/pexels-mart-production-8869406.jpg' %}');">
+<div class="error-container" style="background-image: url('{% static 'images/404_desert.jpg' %}');"
   <h1>404</h1>
   <p>You’ve drifted off course…</p>
   <a href="{% url 'home' %}" class="btn btn-light">Take Me Home</a>
