--- a/store/templates/404.html
+++ b/store/templates/404.html
@@ -1,10 +1,16 @@
-{% extends "base.html" %}
 {% load static %}
-
-{% block content %}
-<div class="error-container" style="background-image: url('{% static 'images/404_desert.jpg' %}');"
-  <h1>404</h1>
-  <p>You’ve drifted off course…</p>
-  <a href="{% url 'home' %}" class="btn btn-light">Take Me Home</a>
-</div>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>404 – Page Not Found</title>
+  <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+</head>
+<body>
+  <div class="error-container" style="background-image: url('{% static "images/404_desert.jpg" %}')">
+    <h1>404</h1>
+    <p>You’ve drifted off course…</p>
+    <a href="{% url 'home' %}" class="btn">Take Me Home</a>
+  </div>
+</body>
+</html>
