--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,7 @@
             </li>
             <li class="nav-item"><a class="nav-link" href="{% url 'community' %}">Community</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact</a></li>
 
 
             {% if user.is_authenticated %}
