--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -22,7 +22,7 @@
 <div class="container-fluid text-center mt-5 pt-5">
   <div class="row justify-content-center">
     <div class="col-lg-8">
-      <img src="{% static 'images/drift_cult_logo.webp' %}" alt="Drift Cult Logo" class="img-fluid mb-4" style="max-height: 120px;">
+      <img src="{% static 'images/drift_cult_logo_transparent.png' %}" alt="Drift Cult Logo" class="img-fluid mb-4" style="max-height: 180px;">
       <h1 class="display-4 font-weight-bold">Drift Cult</h1>
       <p class="lead mt-3">Minimalist Surf, Skate & Outdoor Apparel made to last the journey.</p>
       <p class="mb-4">No sellouts. No mainstream. Just raw, authentic culture. Join the movement.</p>
